# Hadronis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  performance.yml  quality.yml  release.yml
benches/: molecular_bench.rs  scaling_bench.rs
benchmarks/: README.md
benchmarks/python/: benchmark_md_trace.py  benchmark_single_molecule_latency.py  benchmark_thread_scaling.py  painn_pyg.py
examples/: profile_engine.rs
python/hadronis/: __init__.py  engine.py
python/hadronis.egg-info/: PKG-INFO
python/valence/: __init__.py  core.py
scripts/: memory_tracker.py  stress_tests.py
src/: CMakeLists.txt  batch.rs  graph.rs  hadronis.cpp  lib.rs  model.rs
tests/: CMakeLists.txt  test_core.py
tests/cpp/: test_sanity.cpp
tests/python/: test_bench_engine.py  test_codspeed_benchmark.py  test_core.py  test_memory_growth.py
